--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.11.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cross-env": "^7.0.2",
     "disable-scroll": "^0.5.1",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
@@ -40,6 +41,7 @@
     "redux-thunk": "^2.3.0",
     "scroll-to-element": "^2.0.3",
     "sweetalert": "^2.1.2",
+    "win-node-env": "^0.4.0",
     "yup": "^0.29.3"
   },
   "optionalDependencies": {
